tests/baselines/reference/thisInInstanceMemberInitializer.errors.txt
thisInInstanceMemberInitializer.ts(7,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


==== thisInInstanceMemberInitializer.ts (1 errors) ====
    class C {
        x = this;
    }
    
    class D<T> {
        x = this;
        y: T;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }